syntax = "proto3";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message Adresse {
   string Postleitzahl = 3;
   string Ort = 4;
   string Strasse = 5;
   string Hausnummer = 6;
   string Postfach = 7;
   string Adresszusatz = 8;
   string CoErgaenzung = 9;
   Landescode Landescode = 10;
}
enum Anrede {
   HERR = 0;
   FRAU = 1;
   EHELEUTE = 2;
   FIRMA = 3;
   INDIVIDUELL = 4;
   DR = 5;
}
message DateTimeOffset {
}
message Geschaeftspartner {
   Anrede Anrede = 4;
   string Name1 = 6;
   string Name2 = 7;
   string Name3 = 8;
   bool Gewerbekennzeichnung = 9;
   string Hrnummer = 10;
   string Amtsgericht = 11;
   repeated Kontaktart Kontaktweg = 12 [packed = false];
   string UmsatzsteuerId = 13;
   string GlaeubigerId = 14;
   string EMailAdresse = 15;
   string Website = 16;
   repeated Geschaeftspartnerrolle Geschaeftspartnerrolle = 17 [packed = false];
   Adresse Partneradresse = 18;
   string Title = 1001;
}
enum Geschaeftspartnerrolle {
   LIEFERANT = 0;
   DIENSTLEISTER = 1;
   KUNDE = 2;
   INTERESSENT = 3;
   MARKTPARTNER = 4;
}
enum Kontaktart {
   ANSCHREIBEN = 0;
   TELEFONAT = 1;
   FAX = 2;
   E_MAIL = 3;
   SMS = 4;
}
enum Landescode {
   AC = 0;
   AD = 1;
   AE = 2;
   AF = 3;
   AG = 4;
   AI = 5;
   AL = 6;
   AM = 7;
   AN = 8;
   AO = 9;
   AQ = 10;
   AR = 11;
   AS = 12;
   AT = 13;
   AU = 14;
   AW = 15;
   AX = 16;
   AZ = 17;
   BA = 18;
   BB = 19;
   BD = 20;
   BE = 21;
   BF = 22;
   BG = 23;
   BH = 24;
   BI = 25;
   BJ = 26;
   BL = 27;
   BM = 28;
   BN = 29;
   BO = 30;
   BQ = 31;
   BR = 32;
   BS = 33;
   BT = 34;
   BU = 35;
   BV = 36;
   BW = 37;
   BY = 38;
   BZ = 39;
   CA = 40;
   CC = 41;
   CD = 42;
   CF = 43;
   CG = 44;
   CH = 45;
   CI = 46;
   CK = 47;
   CL = 48;
   CM = 49;
   CN = 50;
   CO = 51;
   CP = 52;
   CR = 53;
   CS = 54;
   CU = 55;
   CV = 56;
   CW = 57;
   CX = 58;
   CY = 59;
   CZ = 60;
   DE = 61;
   DG = 62;
   DJ = 63;
   DK = 64;
   DM = 65;
   DO = 66;
   DZ = 67;
   EA = 68;
   EC = 69;
   EE = 70;
   EG = 71;
   EH = 72;
   ER = 73;
   ES = 74;
   ET = 75;
   EU = 76;
   FI = 77;
   FJ = 78;
   FK = 79;
   FM = 80;
   FO = 81;
   FR = 82;
   FX = 83;
   GA = 84;
   GB = 85;
   GD = 86;
   GE = 87;
   GF = 88;
   GG = 89;
   GH = 90;
   GI = 91;
   GL = 92;
   GM = 93;
   GN = 94;
   GP = 95;
   GQ = 96;
   GR = 97;
   GS = 98;
   GT = 99;
   GU = 100;
   GW = 101;
   GY = 102;
   HK = 103;
   HM = 104;
   HN = 105;
   HR = 106;
   HT = 107;
   HU = 108;
   IC = 109;
   ID = 110;
   IE = 111;
   IL = 112;
   IM = 113;
   IN = 114;
   IO = 115;
   IQ = 116;
   IR = 117;
   IS = 118;
   IT = 119;
   JE = 120;
   JM = 121;
   JO = 122;
   JP = 123;
   KE = 124;
   KG = 125;
   KH = 126;
   KI = 127;
   KM = 128;
   KN = 129;
   KP = 130;
   KR = 131;
   KW = 132;
   KY = 133;
   KZ = 134;
   LA = 135;
   LB = 136;
   LC = 137;
   LI = 138;
   LK = 139;
   LR = 140;
   LS = 141;
   LT = 142;
   LU = 143;
   LV = 144;
   LY = 145;
   MA = 146;
   MC = 147;
   MD = 148;
   ME = 149;
   MF = 150;
   MG = 151;
   MH = 152;
   MK = 153;
   ML = 154;
   MM = 155;
   MN = 156;
   MO = 157;
   MP = 158;
   MQ = 159;
   MR = 160;
   MS = 161;
   MT = 162;
   MU = 163;
   MV = 164;
   MW = 165;
   MX = 166;
   MY = 167;
   MZ = 168;
   NA = 169;
   NC = 170;
   NE = 171;
   NF = 172;
   NG = 173;
   NI = 174;
   NL = 175;
   NO = 176;
   NP = 177;
   NR = 178;
   NT = 179;
   NU = 180;
   NZ = 181;
   OM = 182;
   PA = 183;
   PE = 184;
   PF = 185;
   PG = 186;
   PH = 187;
   PK = 188;
   PL = 189;
   PM = 190;
   PN = 191;
   PR = 192;
   PS = 193;
   PT = 194;
   PW = 195;
   PY = 196;
   QA = 197;
   RE = 198;
   RO = 199;
   RS = 200;
   RU = 201;
   RW = 202;
   SA = 203;
   SB = 204;
   SC = 205;
   SD = 206;
   SE = 207;
   SF = 208;
   SG = 209;
   SH = 210;
   SI = 211;
   SJ = 212;
   SK = 213;
   SL = 214;
   SM = 215;
   SN = 216;
   SO = 217;
   SR = 218;
   SS = 219;
   ST = 220;
   SU = 221;
   SV = 222;
   SX = 223;
   SY = 224;
   SZ = 225;
   TA = 226;
   TC = 227;
   TD = 228;
   TF = 229;
   TG = 230;
   TJ = 231;
   TK = 232;
   TL = 233;
   TM = 234;
   TN = 235;
   TO = 236;
   TP = 237;
   TR = 238;
   TT = 239;
   TV = 240;
   TW = 241;
   TZ = 242;
   UA = 243;
   UG = 244;
   UK = 245;
   UM = 246;
   US = 247;
   UY = 248;
   UZ = 249;
   VA = 250;
   VC = 251;
   VE = 252;
   VG = 253;
   VI = 254;
   VN = 255;
   VU = 256;
   WF = 257;
   WS = 258;
   XK = 259;
   YE = 260;
   YT = 261;
   YU = 262;
   ZA = 263;
   ZM = 264;
   ZR = 265;
   ZW = 266;
}
message Menge {
   .bcl.Decimal Wert = 3;
   Mengeneinheit Einheit = 4;
}
enum Mengeneinheit {
   ZERO = 0; // proto3 requires a zero value as the first item (it can be named anything)
   WH = 2;
   KW = 3;
   ANZAHL = 7;
   KUBIKMETER = 11;
   STUNDE = 13;
   TAG = 17;
   MONAT = 19;
   VAR = 23;
   VARH = 29;
   JAHR = 228;
   KWH = 2000;
   MW = 3000;
   KVAR = 23000;
   KVARH = 29000;
   MWH = 2000000;
}
enum NetznutzungsVertrag {
   KUNDEN_NB = 0;
   LIEFERANTEN_NB = 1;
}
enum Netznutzungsabrechnungsgrundlage {
   LIEFERSCHEIN = 0;
   ABWEICHENDE_GRUNDLAGE = 1;
}
enum Netznutzungsabrechnungsvariante {
   ARBEITSPREIS_GRUNDPREIS = 0;
   ARBEITSPREIS_LEISTUNGSPREIS = 1;
}
enum Netznutzungszahler {
   KUNDE = 0;
   LIEFERANT = 1;
}
enum Sparte {
   STROM = 0;
   GAS = 1;
   FERNWAERME = 2;
   NAHWAERME = 3;
   WASSER = 4;
   ABWASSER = 5;
}
message Unterschrift {
   string Ort = 3;
   DateTimeOffset Datum = 4;
   string Name = 5;
}
message Vertrag {
   string Vertragsnummer = 4;
   string Beschreibung = 5;
   Vertragsart Vertragsart = 6;
   Vertragstatus Vertragstatus = 7;
   Sparte Sparte = 8;
   DateTimeOffset Vertragsbeginn = 9;
   DateTimeOffset Vertragsende = 10;
   Geschaeftspartner Vertragspartner1 = 11;
   Geschaeftspartner Vertragspartner2 = 12;
   repeated Unterschrift Unterzeichnervp1 = 13;
   repeated Unterschrift Unterzeichnervp2 = 14;
   Vertragskonditionen Vertragskonditionen = 15;
   repeated Vertragsteil Vertragsteile = 16;
   .bcl.Decimal Gemeinderabatt = 1017;
   Geschaeftspartner Korrespondenzpartner = 1018;
}
enum Vertragsart {
   ENERGIELIEFERVERTRAG = 0;
   NETZNUTZUNGSVERTRAG = 1;
   BILANZIERUNGSVERTRAG = 2;
   MESSSTELLENBETRIEBSVERTRAG = 3;
   BUENDELVERTRAG = 4;
}
message Vertragskonditionen {
   string Beschreibung = 3;
   int32 AnzahlAbschlaege = 4;
   Zeitraum Vertragslaufzeit = 5;
   Zeitraum Kuendigungsfrist = 6;
   Zeitraum Vertragsverlaengerung = 7;
   Zeitraum Abschlagszyklus = 8;
   DateTimeOffset StartAbrechnungsjahr = 1009;
   Zeitraum GeplanteTurnusablesung = 1010;
   int32 TurnusablesungIntervall = 1011;
   Zeitraum Netznutzungsabrechnung = 1012;
   int32 NetznutzungsabrechnungIntervall = 1013;
   bool Haushaltskunde = 1014;
   NetznutzungsVertrag Netznutzungsvertrag = 1015;
   Netznutzungszahler Netznutzungszahler = 1016;
   Netznutzungsabrechnungsvariante Netznutzungsabrechnungsvariante = 1017;
   Netznutzungsabrechnungsgrundlage Netznutzungsabrechnungsgrundlage = 1018;
}
enum Vertragstatus {
   IN_ARBEIT = 0;
   UEBERMITTELT = 1;
   ANGENOMMEN = 2;
   AKTIV = 3;
   ABGELEHNT = 4;
   WIDERRUFEN = 5;
   STORNIERT = 6;
   GEKUENDIGT = 7;
   BEENDET = 8;
}
message Vertragsteil {
   DateTimeOffset Vertragsteilbeginn = 3;
   DateTimeOffset Vertragsteilende = 4;
   string Lokation = 5;
   Menge VertraglichFixierteMenge = 6;
   Menge MinimaleAbnahmemenge = 7;
   Menge MaximaleAbnahmemenge = 8;
   Menge Jahresverbrauchsprognose = 1009;
   Menge Kundenwert = 1010;
   string Verbrauchsaufteilung = 1011;
}
enum Zeiteinheit {
   SEKUNDE = 0;
   MINUTE = 1;
   STUNDE = 2;
   VIERTEL_STUNDE = 3;
   TAG = 4;
   WOCHE = 5;
   MONAT = 6;
   QUARTAL = 7;
   HALBJAHR = 8;
   JAHR = 9;
}
message Zeitraum {
   Zeiteinheit Einheit = 3;
   .bcl.Decimal Dauer = 4;
   DateTimeOffset Startdatum = 5;
   DateTimeOffset Enddatum = 6;
}
